--- a/.env.development
+++ b/.env.development
@@ -28,3 +28,9 @@ SMS_SECRET_ID = ''
 SMS_SECRET_KEY = ''
 # 腾讯云短信 Region
 SMS_REGION = ''
+
+# cookie
+COOKIES_DOMAIN = ''
+COOKIES_HTTP_ONLY = true
+COOKIES_OVERWRITE = true
+COOKIES_SECURE = false
